erDiagram
    tenants ||--o{ feature_flags : has
    tenants ||--o{ audit_log : has
    tenants ||--o{ outbox_events : has
    tenants {
        uuid id PK
        string name
        string plan
        string region
        string status
        timestamp created_at
        timestamp updated_at
    }
    policies {
        uuid id PK
        string permission_code
        string effect
        text allowed_plans
        text allowed_regions
        boolean enabled
        string notes
        timestamp created_at
        timestamp updated_at
    }
    feature_flags {
        uuid id PK
        uuid tenant_id FK
        string name
        boolean enabled
        int rollout_percent
        text allowed_roles
        timestamp created_at
        timestamp updated_at
    }
    audit_log {
        uuid id PK
        uuid tenant_id
        string actor_sub
        text actor_roles
        text actor_perms
        string action
        string resource_type
        string resource_id
        string method
        string path
        int status_code
        string correlation_id
        text details
        timestamp created_at
    }
    outbox_events {
        uuid id PK
        string aggregate_type
        string aggregate_id
        string event_type
        text payload
        string status
        int attempts
        timestamp next_attempt_at
        timestamp created_at
        timestamp updated_at
    }
